deps/bleveldb-sys/src/lib.rs


    /// Enable or disable seek-based auto compaction
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `val` - Non-zero to disable seek auto compaction, zero to enable
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_disable_seek_autocompaction(o: *mut leveldb_options_t, val: c_uchar);

    /// Set the compression algorithm
    ///
    /// # Arguments
    ///
    /// * `o` - Options handle
    /// * `val` - Compression algorithm to use
    ///
    /// # Safety
    ///
    /// - `o` must be a valid options pointer
    pub fn leveldb_options_set_compression(o: *mut leveldb_options_t, val: Compression);

    // =========================================================================
    // Comparator Operations
    // =========================================================================

    /// Create a custom comparator
    ///
    /// # Arguments
    ///
    /// * `state` - User state pointer
    /// * `destructor` - Function to clean up state
    /// * `compare` - Function to compare two keys
    /// * `name` - Function to return comparator name
    ///
    /// # Returns
    ///
    /// Pointer to a new comparator handle
    ///
    /// # Safety
    ///
    /// - Caller must call `leveldb_comparator_destroy()` on the returned pointer
    /// - Function pointers must be valid and have correct signatures
    pub fn leveldb_comparator_create(
        state: *mut c_void,
        destructor: extern "C" fn(*mut c_void),
        compare: extern "C" fn(*mut c_void, *const c_char, size_t, *const c_char, size_t) -> c_int,
        name: extern "C" fn(*mut c_void) -> *const c_char,
    ) -> *mut leveldb_comparator_t;

    /// Destroy a comparator and release its resources
    ///
    /// # Arguments
    ///
    /// * `c` - Comparator to destroy
    ///
    /// # Safety
    ///
    /// - `c` must be a valid comparator pointer
    pub fn leveldb_comparator_destroy(c: *mut leveldb_comparator_t);

    // =========================================================================
    // Filter Policy Operations
    // =========================================================================

    /// Create a custom filter policy
    ///
    /// # Arguments
    ///
    /// * `state` - User state pointer
    /// * `destructor` - Function to clean up state
    /// * `create_filter` - Function to create filter from keys
    /// * `key_may_match` - Function to check if key may be in filter
    /// * `name` - Function to return filter policy name
    ///
    /// # Returns
    ///
    /// Pointer to a new filter policy handle
    ///
    /// # Safety
    ///
    /// - Caller must call `leveldb_filterpolicy_destroy()` on the returned pointer
    /// - Function pointers must be valid and have correct signatures
    pub fn leveldb_filterpolicy_create(
        state: *mut c_void,
        destructor: extern "C" fn(*mut c_void),
        create_filter: extern "C" fn(
            *mut c_void,
            *const *const c_char,
            *const size_t,
            c_int,
            *mut size_t,
        ) -> *mut c_char,
        key_may_match: extern "C" fn(
            *mut c_void,
            *const c_char,
            size_t,
            *const c_char,
            size_t,
        ) -> u8,
        name: extern "C" fn(*mut c_void) -> *const c_char,
    ) -> *mut leveldb_filterpolicy_t;

    /// Destroy a filter policy and release its resources
    ///
    /// # Arguments
    ///
    /// * `policy` - Filter policy to destroy
    ///
    /// # Safety
    ///
    /// - `policy` must be a valid filter policy pointer
    pub fn leveldb_filterpolicy_destroy(policy: *mut leveldb_filterpolicy_t);

    /// Create a bloom filter policy
    ///
    /// # Arguments
    ///
    /// * `bits_per_key` - Number of bits to use per key in the bloom filter
    ///
    /// # Returns
    ///
    /// Pointer to a new bloom filter policy handle
    ///
    /// # Safety
    ///
    /// - Caller must call `leveldb_filterpolicy_destroy()` on the returned pointer
    pub fn leveldb_filterpolicy_create_bloom(bits_per_key: c_int) -> *mut leveldb_filterpolicy_t;

    // =========================================================================
    // Read Options Operations
    // =========================================================================

    /// Create a new read options handle
    ///
    /// # Returns
    ///
    /// Pointer to a new read options handle
    ///
    /// # Safety
    ///
    /// - Caller must call `leveldb_readoptions_destroy()` on the returned pointer
    pub fn leveldb_readoptions_create() -> *mut leveldb_readoptions_t;

    /// Destroy a read options handle and release its resources
    ///
    /// # Arguments
    ///
    /// * `o` - Read options handle to destroy
    ///
    /// # Safety
    ///
    /// - `o` must be a valid read options pointer
    pub fn leveldb_readoptions_destroy(o: *mut leveldb_readoptions_t);

    /// Configure whether to verify checksums on read
    ///
    /// # Arguments
    ///
    /// * `o` - Read options handle
    /// * `val` - Non-zero to verify checksums, zero to skip
    ///
    /// # Safety
    ///
    /// - `o` must be a valid read options pointer
    pub fn leveldb_readoptions_set_verify_checksums(o: *mut leveldb_readoptions_t, val: c_uchar);

    /// Configure whether to fill the cache on read
    ///
    /// # Arguments
    ///
    /// * `o` - Read options handle
    /// * `val` - Non-zero to fill cache, zero to skip
    ///
    /// # Safety
    ///
    /// - `o` must be a valid read options pointer
    pub fn leveldb_readoptions_set_fill_cache(o: *mut leveldb_readoptions_t, val: c_uchar);

    /// Set the snapshot to read from
    ///
    /// # Arguments
    ///
    /// * `o` - Read options handle
    /// * `snapshot` - Snapshot to read from
    ///
    /// # Safety
    ///
    /// - Both pointers must be valid
    pub fn leveldb_readoptions_set_snapshot(
        o: *mut leveldb_readoptions_t,
        snapshot: *const leveldb_snapshot_t,
    );

    // =========================================================================
    // Write Options Operations
    // =========================================================================

    /// Create a new write options handle
    ///
    /// # Returns
    ///
    /// Pointer to a new write options handle
    ///
    /// # Safety
    ///
    /// - Caller must call `leveldb_writeoptions_destroy()` on the returned pointer
    pub fn leveldb_writeoptions_create() -> *mut leveldb_writeoptions_t;

    /// Destroy a write options handle and release its resources
    ///
    /// # Arguments
    ///
    /// * `o` - Write options handle to destroy
    ///
    /// # Safety
    ///
    /// - `o` must be a valid write options pointer
    pub fn leveldb_writeoptions_destroy(o: *mut leveldb_writeoptions_t);

    /// Configure whether to sync writes to disk
    ///
    /// # Arguments
    ///
    /// * `o` - Write options handle
    /// * `val` - Non-zero to sync, zero for async writes
    ///
    /// # Safety
    ///
    /// - `o` must be a valid write options pointer
    pub fn leveldb_writeoptions_set_sync(o: *mut leveldb_writeoptions_t, val: c_uchar);

    // =========================================================================
    // Cache Operations
    // =========================================================================

    /// Create a new LRU cache
    ///
    /// # Arguments
    ///
    /// * `capacity` - Cache capacity in bytes
    ///
    /// # Returns
    ///
    /// Pointer to a new cache handle
    ///
    /// # Safety
    ///
    /// - Caller must call `leveldb_cache_destroy()` on the returned pointer
    pub fn leveldb_cache_create_lru(capacity: size_t) -> *mut leveldb_cache_t;

    /// Destroy a cache and release its resources
    ///
    /// # Arguments
    ///
    /// * `cache` - Cache to destroy
    ///
    /// # Safety
    ///
    /// - `cache` must be a valid cache pointer
    pub fn leveldb_cache_destroy(cache: *mut leveldb_cache_t);

    // =========================================================================
    // Environment Operations
    // =========================================================================

    /// Create the default environment
    ///
    /// # Returns
    ///
    /// Pointer to a new environment handle
    ///
    /// # Safety
    ///
    /// - Caller must call `leveldb_env_destroy()` on the returned pointer
    pub fn leveldb_create_default_env() -> *mut leveldb_env_t;

    /// Destroy an environment and release its resources
    ///
    /// # Arguments
    ///
    /// * `env` - Environment to destroy
    ///
    /// # Safety
    ///
    /// - `env` must be a valid environment pointer
    pub fn leveldb_env_destroy(env: *mut leveldb_env_t);

    // =========================================================================
    // Utility Functions
    // =========================================================================

    /// Free memory allocated by LevelDB
    ///
    /// # Arguments
    ///
    /// * `ptr` - Pointer to memory to free
    ///
    /// # Safety
    ///
    /// - `ptr` must be a pointer returned from LevelDB functions like `leveldb_get()`
    /// - After this call, the pointer becomes invalid
    pub fn leveldb_free(ptr: *mut c_void);

    // =========================================================================
    // Version Information
    // =========================================================================

    /// Get the major version number of LevelDB
    ///
    /// # Returns
    ///
    /// Major version number
    pub fn leveldb_major_version() -> c_int;

    /// Get the minor version number of LevelDB
    ///
    /// # Returns
    ///
    /// Minor version number
    pub fn leveldb_minor_version() -> c_int;
}

#[cfg(test)]
mod tests;
